Remove warning DCHECK from GPU Image Decode Controller

When uploading an image, the DeferredTextureImageUsageParams should not
have changed from initial sizing time. Somehow this can happen. This is
not a correctness error, but a slight perf issue, as it will cause us
to lazy generate mips as opposed to doing so asynchronously.

We should fix this issue and re-add the DCHECKs to enforce this, but
until we are able to, remove the DCHECK.

BUG=649167
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2361493005
Cr-Commit-Position: refs/heads/master@{#420685}

Former-commit-id: 1299d0c91e5943e7ebc689d3770793180fa0b1af